[package]
name = "heiliao_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = "0.12"
config = { version = "0.15.14", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
scraper = "0.23.1"
serde_json = "1.0"
moka = { version = "0.12.10", features = ["future"] }
